# stts22h-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml
.github/workflows/: checks.yml  publish.yml
bsp/: .gitignore  Cargo.toml  README.md  build.rs
bsp/.cargo/: config.toml
bsp/src/: board_macro.rs  main.rs
bsp/src/examples/: read_polling.rs
examples/read_data_polling_stm32f401re/: Cargo.toml
examples/read_data_polling_stm32f401re/src/: main.rs
examples/read_data_polling_stm32f401re_embassy/: Cargo.toml  README.md
examples/read_data_polling_stm32f401re_embassy/src/: main.rs
src/: driver.rs  lib.rs  prelude.rs
src/register/: main.rs  mod.rs
tests/: i2c.rs
