[package]
name = "stts22h-rs"
version = "2.0.0"
edition = "2024"
rust-version = "1.85.1"
readme = "README.md"
license = "BSD-3-Clause"
categories = ["embedded", "no-std"]
keywords = ["st", "sensor", "temperature", "low-power"]
repository = "https://github.com/STMicroelectronics/stts22h-rs"
description = """
    Platform-agnostic driver for the STTS22H high-accuracy digital temperature sensor with I2C/SMBus
    interface, low power modes, and programmable interrupt.
"""

[lib]
doctest = false

[dependencies]
bisync = "0.3.0"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
bitfield-struct = "0.10.0"
st-mems-bus = "2.0.0"
st-mem-bank-macro = "2.0.0"

# By default the bit order is assumed as Least Significant Bit.
[features]
default = ["async"]
async = []
blocking = []
bit_order_msb = []
