[package]
name = "stts22h-rs"
version = "2.0.0"
edition = "2024"
rust-version = "1.85.1"
readme = "README.md"
license = "BSD-3-Clause"
categories = ["embedded", "no-std"]
keywords = ["st", "sensor", "temperature", "low-power"]
repository = "https://github.com/STMicroelectronics/stts22h-rs"
description = """
    Platform-agnostic driver for the STTS22H high-accuracy digital temperature sensor with I2C/SMBus
    interface, low power modes, and programmable interrupt.
"""

[lib]
doctest = false

[dependencies]
bisync = "0.3.0"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
bitfield-struct = "0.10.0"
st-mems-bus = "2.0.0"
st-mem-bank-macro = "2.0.0"

# Features
# --------
# - By default the async API is enabled via the `async` feature.
#   Enable `blocking` to use the blocking variant instead.
#
# - Bit order defaults to Least Significant Bit first.
#   Enable `bit_order_msb` to use Most Significant Bit first.
[features]
default = ["async"]
# Expose the asynchronous driver module.
async = []
# Expose the blocking driver module.
blocking = []
# Use Most Significant Bit first instead of the default LSB-first ordering.
bit_order_msb = []

[package.metadata.docs.rs]
all-features = true
